# win_lin_kinect

./: .gitignore  KinectSimpleRgbdClient.cc  README.md  kinect_rgbd.grpc.pb.cc  kinect_rgbd.grpc.pb.h  kinect_rgbd.pb.cc  kinect_rgbd.pb.h
KinectSimpleRgbdClient/: KinectSimpleRgbdClient.cc  kinect_rgbd.grpc.pb.h
KinectSimpleRgbdClient/examples/: image_stream.sh  points.sh  points_stream.sh
KinectSimpleRgbdServer/: App.xaml  KinectRgbd.cs  KinectRgbdGrpc.cs  KinectRgbdImpl.cs  KinectSimpleRgbdServer.csproj  MainWindow.xaml  MainWindow.xaml.cs  packages.config
KinectSimpleRgbdServer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
examples/: image.sh  image_stream.sh  points_stream.sh
linux_kinect/: CMakeLists.txt  kinect_rgbd_interaction.launch  package.xml  setup.sh
linux_kinect/.templates/: CMakeLists.all  CMakeLists.cvex  CMakeLists.ex  CMakeLists.lib  CMakeLists.py
linux_kinect/KinectRgbdInteractionClient/: KinectRgbdInteractionClient.cc  kinect_person.grpc.pb.cc  kinect_person.grpc.pb.h  kinect_person.pb.cc  kinect_person.pb.h  kinect_robot.grpc.pb.cc  kinect_robot.grpc.pb.h  kinect_robot.pb.cc  kinect_robot.pb.h
linux_kinect/KinectRgbdInteractionClient/examples/: image.sh  points.sh
linux_kinect/KinectRgbdInteractionClient/protos/: kinect_person.proto  kinect_robot.proto
linux_kinect/KinectSimpleInteractionClient/: KinectSimpleInteractionClient.cc  kinect_robot.grpc.pb.cc  kinect_robot.grpc.pb.h
linux_kinect/KinectSimpleRgbdClient/: KinectSimpleRgbdClient.cc  kinect_rgbd.pb.cc
linux_kinect/examples/: camera_info.cc  image.cc  image_bounds.cc  image_centers.cc  ocr.cc  person_detection.cc  point_stream.cc  points.cc  points_compressed.cc  speech_matching.cc  tts.cc
linux_kinect/include/linux_kinect/: KinectInterface.hh  WindowsInterface.hh
linux_kinect/launch/: kinect_rgbd_interaction.launch  kinect_speech_interaction.launch  person_detection.launch
linux_kinect/lib/: KinectInterface.cc  KinectInterface.hh  WindowsInterface.cc
linux_kinect/msg/: Bit.msg  Cognition.msg  Face.msg  People.msg  Person.msg  Tag.msg  UrlInfo.msg
linux_kinect/nodes/: extract_rgb_from_depth.cc  extract_rgb_from_depth_filtered.cc  extract_rgb_from_depth_filtered_with_log.cc  simple_axis_threshold.cc  stream_compressed_depth.cc
linux_kinect/python/: alarm.py  audio_beam.py  audio_stream.py  face_pose_detector.py  kinect_camerainfo_stream.py  kinect_face_images.py  kinect_get_3d.py  kinect_get_image.py  kinect_image_stream.py  kinect_point_stream.py  network.py  ocr.py  single_conversation.py  speech_recognition.py  tts.py
linux_kinect/src/: KinectInterface.cc  WindowsInterface.cc
linux_kinect/srv/: KinectCameraInfo.srv  KinectImage.srv  KinectPoints.srv  KinectRequest.srv  KinectSettings.srv  Ocr.srv
linux_kinect/tools/: audio_player.py  get_tts_time.py  speechfile_example.yaml
protos/: kinect_rgbd.proto
windows_kinect/: compile_proto.bat  compile_proto.sh
windows_kinect/HaarRuntimeComponent/: HaarRuntimeComponent.sln
windows_kinect/HaarRuntimeComponent/HaarRuntimeComponent/: Class1.cpp  Class1.h  HaarRuntimeComponent.vcxproj  HaarRuntimeComponent.vcxproj.filters  packages.config
windows_kinect/KinectFaceInteraction/: KinectFaceInteraction.sln
windows_kinect/KinectFaceInteraction/KinectFaceInteraction/: App.xaml  App.xaml.cs  KinectFaceInteraction.csproj  KinectFaceInteraction_TemporaryKey.pfx  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  project.json  project.lock.json
windows_kinect/KinectFaceInteraction/KinectFaceInteraction/Properties/: AssemblyInfo.cs
windows_kinect/KinectImageStreamer/: KinectImageStreamer.sln
windows_kinect/KinectImageStreamer/KinectImageStreamer/: App.xaml  App.xaml.cs  KinectImageStreamer.csproj  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  project.json  project.lock.json
windows_kinect/KinectMicrophoneInteraction/: KinectMicrophoneInteraction.sln
windows_kinect/KinectMicrophoneInteraction/KinectMicrophoneInteraction/: App.config  App.xaml  App.xaml.cs  KinectMicrophoneInteraction.csproj  MainWindow.xaml  MainWindow.xaml.cs  packages.config
windows_kinect/KinectRgbdInteraction/: KinectRgbdInteraction.sln
windows_kinect/KinectRgbdInteraction/KinectRgbdInteraction/: App.xaml  App.xaml.cs  KinectRgbdInteraction.csproj  KinectRgbdInteraction_TemporaryKey.pfx  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  project.json
windows_kinect/KinectRgbdInteractionServer/: KinectRgbdInteractionServer.sln
windows_kinect/KinectRgbdInteractionServer/KinectRgbdInteractionServer/: App.config  App.xaml  App.xaml.cs  KinectPerson.cs  KinectPersonGrpc.cs  KinectRgbdInteractionServer.csproj  KinectRobot.cs  KinectRobotGrpc.cs  KinectRobotImpl.cs  MainWindow.xaml  MainWindow.xaml.cs  packages.config
windows_kinect/KinectRgbdInteractionServer/protos/: kinect_person.proto  kinect_robot.proto
windows_kinect/KinectSimpleInteractionServer/: KinectSimpleInteractionServer.sln
windows_kinect/KinectSimpleInteractionServer/KinectSimpleInteractionServer/: App.config  App.xaml  App.xaml.cs  KinectPerson.cs  KinectPersonGrpc.cs  KinectSimpleInteractionServer.csproj  MainWindow.xaml  MainWindow.xaml.cs
windows_kinect/KinectSimpleInteractionServer/protos/: kinect_person.proto
windows_kinect/KinectSimpleRgbdServer/: KinectSimpleRgbdServer.sln
windows_kinect/KinectSimpleRgbdServer/KinectSimpleRgbdServer/: App.config  App.xaml.cs  KinectRgbd.cs  KinectRgbdGrpc.cs  MainWindow.xaml  MainWindow.xaml.cs
windows_kinect/KinectWindowsInteraction/: KinectWindowsInteraction.sln
windows_kinect/KinectWindowsInteraction/KinectWindowsInteraction/: App.xaml  App.xaml.cs  KinectWindowsInteraction.csproj  KinectWindowsInteraction_TemporaryKey.pfx  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
windows_kinect/WindowsKinectLaunch/: WindowsKinectLaunch.sln
windows_kinect/WindowsKinectLaunch/WindowsKinectLaunch/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  WindowsKinectLaunch.csproj  WindowsKinectLaunch_TemporaryKey.pfx  project.lock.json
(+20 files in other folders)
