<?xml version="1.0"?>
<package>
  <name>linux_kinect</name>
  <version>1.0.0</version>
  <description>The windows linux Kinect communication package</description>

  <license>BSD</license>
  <maintainer email="sasabuchi@jsk.t.u-tokyo.ac.jp">
    Kazuhiro Sasabuchi
  </maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export/>
</package>
